--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 
 <body>
+
     <div class="general-container">
+
+        <!-- ESERCIZIO 1, 2 E 3 -->
         <div class="container">
             <div class="div-1 red" id="div-1">
                 DIV
@@ -21,7 +24,38 @@
         <div class="container">
             <button class="btn" id="btn">Cambia colore</button>
         </div>
+
+        <hr>
+
+        <!-- ESERCIZIO 4 -->
+        <table style="width:100%; height:500px;">
+            <tr>
+                <th>Nome</th>
+                <th>Cognome</th>
+                <th>Anni</th>
+            </tr>
+            <tr>
+                <td>Jill</td>
+                <td>Smith</td>
+                <td>50</td>
+            </tr>
+            <tr>
+                <td>Eve</td>
+                <td>Jackson</td>
+                <td>94</td>
+            </tr>
+            <tr>
+                <td>Luis</td>
+                <td>Hernández</td>
+                <td>22</td>
+            </tr>
+        </table>
+
     </div>
+
+
+
+
 
 
     <script src="main.js"></script>
