--- a/index.html
+++ b/index.html
@@ -28,33 +28,34 @@
         <hr>
 
         <!-- ESERCIZIO 4 -->
-        <table style="width:100%; height:500px;">
-            <tr>
-                <th>Nome</th>
-                <th>Cognome</th>
-                <th>Anni</th>
-                <th>Birthplace</th>
-            </tr>
-            <tr>
-                <td>Jill</td>
-                <td>Smith</td>
-                <td>50</td>
-                <td>New York</td>
-            </tr>
-            <tr>
-                <td>Eve</td>
-                <td>Jackson</td>
-                <td>94</td>
-                <td>San Diego</td>
-            </tr>
-            <tr>
-                <td>Luis</td>
-                <td>Hernández</td>
-                <td>22</td>
-                <td>Salamanca</td>
-            </tr>
-        </table>
-
+        <div class="table-container">
+            <table style="width:100%; height:500px;" class="table-4">
+                <tr>
+                    <th>Nome</th>
+                    <th>Cognome</th>
+                    <th>Anni</th>
+                    <th>Birthplace</th>
+                </tr>
+                <tr>
+                    <td>Jill</td>
+                    <td>Smith</td>
+                    <td>50</td>
+                    <td>New York</td>
+                </tr>
+                <tr>
+                    <td>Eve</td>
+                    <td>Jackson</td>
+                    <td>94</td>
+                    <td>San Diego</td>
+                </tr>
+                <tr>
+                    <td>Luis</td>
+                    <td>Hernández</td>
+                    <td>22</td>
+                    <td>Salamanca</td>
+                </tr>
+            </table>
+        </div>
     </div>
 
 
