--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             <button class="btn" id="btn">Cambia colore</button>
         </div>
 
+        <div class="container btn-container">
+            <button class="btn" id="new-btn">Disabilitare bottone</button>
+            <button class="btn" id="new-btn-2">Abilitare bottone</button>
+        </div>
+
         <hr>
 
         <!-- ESERCIZIO 4 -->
@@ -62,8 +67,9 @@
 
 
 
-
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="main.js"></script>
+
 </body>
 
 </html>
